--- a/mmb_front/src/pages/RegisterPage/RegisterPage.css
+++ b/mmb_front/src/pages/RegisterPage/RegisterPage.css
@@ -1,108 +1,133 @@
-html{
-    width : 30%;
-    height : 100%;
-    margin : 0 auto;
-    border : 2px solid black;
+.register-container {
+    min-width: 270px;
+    max-width: 400px;
+    margin: 0 auto;
+    width: 60%;
+    height: 100vh;
 }
-body{
-    width : 100%;
-    height : 100%;
-    padding : 0 3em;
-    border : 2px solid black;
-    font-size: 17px;
+
+.register-form {
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
+
 button{
     background-color: #4891FF;
+    color: #ffffff;
+    border: 0px;
+    font-family: 'NanumSquare';
     border-radius: 8px;
-    color:white;
-    padding : 3px 15px;
-    border : none;
+    width: 45px;
+    height: 35px;
 }
 
 .MU{
-    margin-top : 2em;
     display:flex;
     justify-content: space-around;
     font-size:30px;
     color : #4891FF;
 }
+
 .MULBO{
-    border-bottom : 2px solid #999999;
+    color: #4891FF;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    border-bottom: 1.5px solid #999999;
 }
+
 .title{
-    font-size: 20px;
-    margin-bottom : 5px;
+    font-size: 1em;
+    margin : 10px 0 5px 5px;
+    color : #494949;
 }
+
 .NickName{
     display : flex;
     flex-direction: column;
-    margin-bottom : 1em;
 }
+
 .NickNameCer{
     display : flex;
 }
-.NickNameInput{
+
+.NickNameInput, .password, .password2, .selectBox {
+    border-radius: 12px;
+    border: 2px solid #E9E9E9;
+    height: 25px;
+    margin: 5px;
+    font-family: 'NanumSquare';
+}
+
+.NickNameInput {
     width : 80%;
 }
 
-.Email{
-    margin-bottom : 1em;
+.selectBox {
+    width: 97%;
+    margin-bottom: 15px;
 }
+
 .EmailCer{
     border-radius: 0px;
     display : flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 .email{
-    width : 40%;
-    border-radius: 8px;
-    border : 1px solid #999999;
-    text-align: center;
+    width : 50%;
+    border-radius: 12px;
+    border: 2px solid #E9E9E9;
+    height: 25px;
+    margin: 5px 2px 5px 5px;
+    font-family: 'NanumSquare';
 }
 .kumoh{
-    border-bottom : 1px solid #999999;
+    font-size: 0.6em;
     color: #999999;
+    width: 30%;
+    margin: 0 5px;
 }
+
+#btn1 {
+    width: 20%;
+}
+
+#btn2 {
+    width: 20%;
+}
+
+#btn3 {
+    width: 20%;
+}
+
 .Password{
     display : flex;
     flex-direction: column;
     align-content: space-between;
 }
-.password{
-    width : 100%;
-    margin-bottom: 1em;
-    border:1px solid #999999;
-    border-radius: 8px;
-}
-.password2{
-    width : 100%;
-    margin-bottom: 1em;
-    border:1px solid #999999;
-    border-radius: 8px;
-}
+
 .codeCer{
     display :flex;
-    margin-bottom: 1em;
+    margin: 3px 0;
 }
 .code{
     border : none;
-    border-bottom : 2px solid #999999;
+    border-bottom : 1px solid #999999;
     text-align: center;
+    font-family: 'NanumSquare';
     width : 80%;
 }
-.select{
-    width : 100%;
-    margin-bottom : 1em;
-    border:1px solid #999999;
-    border-radius: 8px;
-}
+
 .Register{
     background-color: #4891FF;
     width : 100%;
     color : white;
     border-radius: 8px;
-    line-height: 50px;
     text-align: center;
-    font-size : 20px;
+    font-size : 15px;
+    margin-bottom: 20px;
 }
