--- a/mmb_front/src/pages/PostModifyPage/PostModifyPage.css
+++ b/mmb_front/src/pages/PostModifyPage/PostModifyPage.css
@@ -1,5 +1,5 @@
-.Modify-container{
-    width: 40%;
+.Modify-container {
+    width: 60%;
     height: 100vh;
     margin: 0 auto;
     background-color: white;
@@ -8,111 +8,94 @@
 }
 
 .Header{
-    height: 10%;
+    width: 100%;
+    height: 65px;
+    max-width: 500px;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items:center;
-    width:90%;
     border-bottom: 2px solid #E6E6E6;
 }
+
+.Header > span {
+    width: 80px;
+}
+
 .p{
-    width: 70%;
     font-size: 20px;
     color:#4891FF;
-    text-align: right;
-    margin-right: 40px;
+    text-align: center;
+    flex-grow: 1;
+    font-weight: bold;
 }
 
 .complete-button{
-    margin: 0 auto;  
-    width:20%; 
-    display: flex;
-    justify-content: center;
-    align-items:center;
+    margin: 0 auto; 
+    width: 80px;
 }
 
 .button1{
     background-color: #4891FF;
     border:none;
     color:aliceblue;
-    width: 76.1px;
+    width: 80%;
     height: 39px;
-    font-size: 15px;
-    border-radius: 12px;
+    font-size: 17px;
+    border-radius: 20px;
     
 }
+
 .Write-bigbox{
     margin-top: 20px;
 }
+
 .title-input {
     width: 90%;
     margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items:center;
     height: 40px;
     margin-bottom: 10px;
     border:none;
     border-bottom: 2px solid #7E7E7E;
-    
+    font-family: 'NanumSquare';
 }
   
 .text-area {
-    margin:  auto;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    width: 90%;
-    height: 300px;
-    border:none;
-
-    
-}
-
-.submit-button{
-    display: flex;
-    justify-content: center;
-    align-items:center;
-}
-.button2 {
-    width: 90%;;
-    height: 50px;
-    font-size: 15px;
-    background-color: white;
-    border-color:#4891FF;
-    border-width: 2px;
-    border-radius: 5px;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
-    align-items:center;
+    width: 90%;
+    min-height: 300px;
+    border:none;
+    font-family: 'NanumSquare';
+}
 
-    
+.button2 {
+    width: 90%;;
+    height: 45px;
+    font-size: 15px;
+    color: #4891FF;
+    background-color: white;
+    border:1px solid #4891FF;
+    border-width: 2px;
+    border-radius: 10px;
+    margin: 0 auto;
 }
 
 .preview{
     width: 90%;
     height: auto;
-    border:2px solid #979797;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    margin: 0 auto;
+    border:2px solid #e6e6e6;
+    margin: 10px auto;
     border-radius: 5px;
     flex-wrap: wrap;
-    
 }
 
 .img-submit{
     visibility: hidden;
 }
 
-.imgs{
-    display: flex;
+.imgs {
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
 }
 
 .file-img-box {
@@ -121,11 +104,21 @@
 }
 
 .file-img {
-    width: 100px;
+    width: 100%;
     height: auto;
 }
 
 .remove-Button{
     position: absolute;
-    margin-left: -35px;
+    margin-left: -45px;
+    background-color: rgb(255,255,255,0.3);
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/* 중앙 정렬 */
+.complete-button, .title-input, .text-area, .button2, .preview, .submit-button, .imgs {
+    display: flex;
+    justify-content: center;
+    align-items:center;
 }
