--- a/mmb_front/src/pages/PostListPage/PostListPage.css
+++ b/mmb_front/src/pages/PostListPage/PostListPage.css
@@ -1,23 +1,13 @@
-html{
-    width : 100%;
-    height : 100%;
-  }
-  body{
-    width : 40%;
-    height : 70%;
-    text-align: center;
-    margin : 0 auto;
-    overflow: hidden;
-    z-index: 1;
-  }
-  #align{
+#align{
     white-space : nowrap;
     font-size : 0;
-  }
-  #align input{
+}
+
+#align input{
     display : none;
-  }
-  #align label{
+}
+
+#align label{
     display : inline-block;
     margin : -2px 0 0;
     font-size : 14px;
@@ -38,7 +28,7 @@ html{
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
-.btn{
+#align > .btn{
   opacity : 0;
 }
 .btn>label{
