--- a/mmb_front/src/component/comment/comment.css
+++ b/mmb_front/src/component/comment/comment.css
@@ -10,6 +10,7 @@
     border-bottom: 2px solid #E6E6E6;
     border-top: 2px solid #E6E6E6;
     display: flex;
+    justify-content: space-between;
 }
 .userName{
     margin-left:10px;
