--- a/mmb_front/src/pages/PostDetailPage/PostDetailPage.css
+++ b/mmb_front/src/pages/PostDetailPage/PostDetailPage.css
@@ -1,7 +1,12 @@
+.detail-page-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .detail-container {
     min-width: 270px;
-    max-width: 400px;
-    background-color: aquamarine;
+    max-width: 500px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -24,6 +29,8 @@
 
 .detail-header > span {
     color: #4891FF;
+    font-size: 16px;
+    font-weight: bolder;
 }
 
 .detail-header > button {
@@ -65,22 +72,87 @@
     margin: 0 auto;
 }
 
+.detail-comment {
+    border-bottom: 1px solid #979797;
+    width: 90%;
+    padding-bottom: 3px;
+    margin: 0 auto;
+}
+
+.detail-comment > img {
+    margin-left: 20px;
+    
+}
+
 #nickName {
     color: #4891FF;
     font-size: 13px;
 
 }
 
+#writeTime {
+    font-size: 12px;
+    color: #979797;
+}
+
 #detail-post-title {
     font-weight: bolder;
     font-size: 17px;
+    color:rgb(58, 58, 58);
+}
+
+.detail-rest {
+    flex: 1;
+    overflow: scroll;
 }
 
 .search-bar {
     position: absolute;
-    left: 0;
     bottom: 0;
     width: 100%;
-    height: 100px;
+    height: 50px;
     background-color: #4891FF;
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.search-bar > button {
+    background-color: #ffffff;
+    border: none;
+    width: 16%;
+    height: 70%;
+    margin: 0 5px;
+    border-radius: 10px;
+    color:#4891FF;
+    font-size: 15px;
+    font-family: 'NanumSquare';
+}
+
+#detail-checkano {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 15%;
+}
+
+#detail-checkano > span {
+    font-size: 15px;
+}
+
+#detail-inputBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    height: 100%;
+}
+
+.detail-input-bar {
+    width: 90%;
+    height: 70%;
+    border: none;
+    border-radius: 10px;
 }
