--- a/mmb_front/src/component/commentForm/commentForm.css
+++ b/mmb_front/src/component/commentForm/commentForm.css
@@ -5,22 +5,21 @@
 .mycommentBigbox{
     border-bottom: 2px solid #E6E6E6;
     display:flex;
-    justify-content: space-between;
 }
 
 .mycommentbox{
     display:flex;
-
+    width:auto;
 }
 
 .comment_date{
-    font-size:15px;
+    font-size:0.8em;
     color:#4891FF;
     margin-left:8px;
 }
 
 .comment_time{
-    font-size:15px;
+    font-size:0.8em;
     color:#4891FF;
     margin-left:8px;
 }
@@ -28,7 +27,7 @@
 .comment_middle{
     margin-top:9px;
     margin-bottom:9px;
-    width:auto;
+    width:100%;
 }
 
 .comment_middle_top{
@@ -36,6 +35,7 @@
     display: flex;
     margin-left: 10px;
     margin-top: 3px;
+    justify-content: space-between;
 }
 
 .post_title{
@@ -49,7 +49,7 @@
 
 .right_datetime{
     display: flex;
-    margin: 10px;
+    margin-top: 0px;
     width: 100px;
 }
 
@@ -62,3 +62,6 @@
     margin-left: 10px
 }
 
+.comment_post{
+    text-align:center;
+}
