--- a/mmb_front/src/pages/MyPage/MyPage.css
+++ b/mmb_front/src/pages/MyPage/MyPage.css
@@ -1,7 +1,10 @@
 .my_page{
+    width: 60%;
     height: 100vh;
-    width: 100vw;
-    position: fixed;
+    margin: 0 auto;
+    background-color: white;
+    min-width: 280px;
+    max-width: 400px;
 }
 
 /* 가로 정렬 */
@@ -20,8 +23,11 @@
 /* 상단 MUMULBO */
 .my_page_app_name{
     color: #4891FF;
-    font-size: 30px;
+    font-size: 25px;
     margin: 4%;
+    font-weight:bold;
+    border-bottom: 1px solid #999999;
+    width: 35%;
 }
 
 /* contents box */
@@ -34,14 +40,23 @@
 }
 
 /* 나의 정보 */
-.my_page_info{
+.my_page_box{
     margin: 5px;
     height: 10%;
     display: flex;
-    align-items: center;
     padding-bottom: 10px;
-    border-bottom: 1px solid rgb(197, 197, 197);
+    border-bottom: 2px solid rgb(197, 197, 197);
     margin-bottom: 20px;
+    justify-content: space-between;
+}
+.my_page_info{
+    border:1px solid #999999;
+    align-items:center;
+    width:100%;
+    padding: 3px;
+    justify-content: space-between;
+    border-radius: 10px;
+
 }
 .my_img{
     width: 45px;
@@ -65,11 +80,12 @@
 .my_info_nick{
     margin-bottom: 2px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 14px;
     color: rgb(47, 47, 47);
 }
 .my_info_major{
     color: rgb(94, 94, 94);
+    font-size: 15px;
 }
 .my_point{
     flex-grow: 1;
@@ -93,10 +109,9 @@
     justify-content: center;
     align-items: center;
     flex-grow: 1;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     color: rgb(91, 91, 91);
-
 }
 
 /* 메뉴 */
@@ -106,13 +121,11 @@
 .my_created_posts, .my_created_comments{
     width: 100%;
     height: 10%;
-    background-color: white;
+    background-color: #E8E8E8;
     color: rgb(50, 50, 50);
     font-weight: bold;
     font-size: 20px;
     border-radius: 15px;
-    border-bottom: 3px solid #7bb0ff;
-    border-right: 3px solid #7bb0ff;
     margin: 10px 0;
 }
 .my_created_toggle{
@@ -123,9 +136,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 0px;
 }
-.my_created_title{
-    width: 90%;
+.my_created{
+    width: 50%;
     display: flex;
     align-items: center;
+    font-size: 15px;
+    margin-top:3px;
+    color:black;
+    border:none;
+    text-decoration: none;
+    background-color: #E8E8E8;
+    font-family: 'NanumSquare';
 }
