--- a/mmb_front/src/pages/PostModifyPage/PostModifyPage.css
+++ b/mmb_front/src/pages/PostModifyPage/PostModifyPage.css
@@ -1,6 +1,6 @@
 .Modify-container {
     width: 60%;
-    height: 100vh;
+    height: calc(100vh-65px);
     margin: 0 auto;
     background-color: white;
     min-width: 280px;
@@ -110,10 +110,11 @@
 
 .remove-Button{
     position: absolute;
-    margin-left: -45px;
+    margin-left: -27px;
     background-color: rgb(255,255,255,0.3);
     font-size: 20px;
     font-weight: bold;
+    border: none;
 }
 
 /* 중앙 정렬 */
